syntax = "proto3"; 

package gcrpc;

message NewAddressRequest{

}

message NewAddresResponse{
    string address = 1 [json_name ="address"];
}

message GetBalanceRequest {
    string address = 1 [json_name ="address"];
}

message GetBalanceResponse {
    // The balance of the wallet
    int64 balance = 1 [json_name ="balance"];
}

service GCD {

     /** gccli: `getbalance`
    GetBalance returns total unspent transaction outputs
    that are in control of the given wallet
    */
    rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {}

     /** gccli: `newaddress`
    NewAddress returns a new address from the wallet
    */
    rpc NewAddress (NewAddressRequest) returns (NewAddresResponse) {}
}

